Fixed desktop and mobile display of the tab navigation and added a spacing between the video on top and the tab container

--- a/sass/components/_tabs.scss
+++ b/sass/components/_tabs.scss
@@ -29,6 +29,7 @@
         border-radius: 16px 16px 0 0;
 
         @include lg {
+            background-color: transparent;
             width: 100%;
         }
     }
@@ -37,6 +38,11 @@
         .fencing-tab-container{
             width: 100%;
             overflow-x: auto;
+            border-top-right-radius: 0;
+
+            @include lg {
+                width: 70%;
+            }
         }
 
 
@@ -58,9 +64,6 @@
     border-left: 0;
     box-sizing: border-box;
     border-right: 0;
-    @include lg{
-        width: 100%;
-    }
 
     &-area{
         height: 100%;
@@ -101,10 +104,9 @@
     border-right: 2px solid var(--fc-bright-gray);
 
     @include lg{
-        padding-left: 4px;
-        padding-right: 4px;
-        min-width: 10px;
-        width: 100%;
+        padding-left: 24px;
+        padding-right: 24px;
+        min-width: 119px;
     }
 
     &:first-child{
@@ -134,7 +136,6 @@
 
         @include lg{
             width: 100%;
-            text-align: center;
             font-size: 20px;
             line-height: 24px;
             top: 0;
@@ -186,8 +187,10 @@
     border-radius: 0 16px 0 0;
 
     @include lg {
-        width: 100%;
-        padding: 17px 15px;
+        width: 119px;
+        padding: 17px 8px;
+        min-width: 10px;
+        font-size: 12px;
     }
 
     &.btn-fc{
@@ -217,25 +220,31 @@
 }
 
 /* width */
+.fencing-tabs-container.enable-scroll .fencing-tab-container::-webkit-scrollbar,
 .fencing-display-result::-webkit-scrollbar {
   width: 10px;
   height: 5px;
 }
 
 /* Track */
+.fencing-tabs-container.enable-scroll .fencing-tab-container::-webkit-scrollbar-track,
 .fencing-display-result::-webkit-scrollbar-track {
   background: #f1f1f1;
 }
 
 /* Handle */
+.fencing-tabs-container.enable-scroll .fencing-tab-container::-webkit-scrollbar-thumb,
 .fencing-display-result::-webkit-scrollbar-thumb {
   background: #333333;
 }
 
 /* Handle on hover */
+.fencing-tabs-container.enable-scroll .fencing-tab-container::-webkit-scrollbar-thumb:hover,
 .fencing-display-result::-webkit-scrollbar-thumb:hover {
   background: #555;
 }	
+
+.fencing-tabs-container.enable-scroll .fencing-tab-container.grabbing:before,
 .fc-section-details .fencing-display-result.grabbing:before {
 	content: "";
 	background: #f6792508;
